--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html{
     list-style: none;
     display: flex;
     gap: 2rem;
-    margin-top: 2rem;
+    margin-top: 2.1rem;
     font-size: 1.8rem;
 }
 
@@ -155,6 +155,86 @@ html{
     object-fit: cover;
 }
 
+.abt-s2 #my-img:hover{
+    box-shadow: 0 0 10px #e0ae3a, 0 0 10px #e0ae3a;
+}
+
+#skill-sec{
+    height: 90vh;
+    background-color: #241e1d;
+}
+
+.center{
+    text-align: center;
+    color: white;
+}
+
+.center h1{
+    font-size: 5rem;
+}
+
+.center p{
+    font-size: 2rem;
+    color: #ffdc8b;
+}
+
+.skill-container{
+    color: #ffdc8b;
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+}
+
+.sub-cont{
+    width: 32%;
+    min-height: 55vh;
+    text-align: center;
+    border: .2rem solid #e0ae3a;
+    border-radius: 2rem;
+    position: relative;
+}
+
+.cont{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.sub-cont h2{
+    color: #ffdc8b;
+    font-size: 3rem;
+}
+
+.skill-list{
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5%;
+}
+
+
+.skill-list span{
+    font-size: 1.7rem;
+    color: white;
+    border: 1px solid #e0ae3a;
+    padding: .8rem 2rem;
+    border-radius: 2rem;
+    margin: .4rem;
+}
+
+.lang-logo{
+    width: 2.2rem;
+}
+
+
+
+
+
+
+
 
 
 
@@ -166,6 +246,15 @@ html{
         margin-top: 4.5rem;
         width: 23rem !important;
         height: 23rem !important;
+    }
+}
+
+@media (min-width: 382px) and (max-width: 430px){
+    .abt{
+        height: 80vh;
+    }
+    .sub-cont{
+        min-height: 20vh !important;
     }
 }
 
@@ -225,7 +314,18 @@ html{
     .abt-s2 #my-img{
         margin-top: 5rem;
     }
+    .skill-container{
+        flex-direction: column;
+        align-items: center;
+        gap: 5rem;
+    }
+    .sub-cont{
+        min-height: 30vh;
+        width: 80%;
+    }
+
 }
+
 
 @media (max-width: 710px) {
     html{
@@ -248,7 +348,10 @@ html{
     }
 }
 
+
 @media (max-width: 966px){
+    
+    
     .abt-s1 h1{
         font-size: 5.2rem;
     }
@@ -269,10 +372,46 @@ html{
         width: 26rem;
         height: 26rem;
     }
+    .skill-container{
+        flex-direction: column;
+        align-items: center;
+        gap: 5rem;
+    }
+    .sub-cont{
+        min-height: 20vh;
+        width: 70%;
+    }
 }
+
+
+
+/* @media (max-width:1034px){
+
+    .sub-cont h2{
+        color: #ffdc8b;
+        font-size: 2.8rem;
+    }
+    
+    .skill-list{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 5%;
+    }
+    
+    .skill-list span{
+        font-size: 1.8rem;
+        padding: .6rem 1.5rem;
+        margin: .3rem;
+    }
+    .cont{
+        gap: 5%;
+    }
+} */
 
 @media (min-width: 1367px){
     html{
-        font-size: 75%;
+        font-size: 68%;
     }
 }
