--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -403,6 +403,10 @@ html{
         min-height: 17vh;
         max-height: 100vh;
     }
+    .skill-list span{
+        font-size: 1.4rem;
+    }
+
 }
 
 
