--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -403,7 +403,7 @@ html{
     }
 
     .vision-cont{
-        width: 80%;
+        width: 80% !important;
     }
 
     .vision-cont h2{
@@ -488,7 +488,7 @@ html{
         font-size: 1.8rem;
     }
     .vision-cont{
-        width: 80%;
+        width: 80% !important; 
     }
 
 }
