--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -250,6 +250,7 @@ html{
     flex-direction: column;
     gap: 2rem;
     padding: 1rem 2rem;
+    border-radius: 2rem;
 }
 
 .vision-cont:last-child{
@@ -274,7 +275,7 @@ html{
     text-indent: 6rem;
 }
 
-.vision-cont span{
+.vision-cont .more{
     display: none;
     transition: 2s ease-in-out;
 }
@@ -283,8 +284,12 @@ html{
     box-shadow: 0 0 .5rem #e0ae3a, 0 0 .5rem #e0ae3a;
 }
 
-.vision-cont:hover span{
+.vision-cont:hover .more{
     display: inline;
+}
+
+.vision-cont:hover .dots{
+    display: none;
 }
 
 
