--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -174,7 +174,7 @@ html{
 }
 
 .center p{
-    font-size: 2rem;
+    font-size: 2.2rem;
     color: #ffdc8b;
 }
 
@@ -241,6 +241,11 @@ html{
     color: white;
     text-align: center;
     font-size: 4.5rem;
+}
+
+#vision p{
+    font-size: 2.1rem;
+    color: #ffdc8b;
 }
 
 .vision-cont{
