--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -243,9 +243,9 @@ html{
     font-size: 4.5rem;
 }
 
-#vision p{
-    font-size: 2.1rem;
+#vision-p{
     color: #ffdc8b;
+    font-size: 2rem;
 }
 
 .vision-cont{
@@ -274,10 +274,10 @@ html{
 }
 
 .vision-cont p{
-    font-size: 1.8rem;
     color: #ffdc8b;
     text-align: justify;
     text-indent: 6rem;
+    font-size: 1.8rem;
 }
 
 .vision-cont .more{
