--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -240,13 +240,13 @@ html{
     gap: 2.5rem;
 }
 
-#vision h1{
+.h1-style{
     color: white;
     text-align: center;
     font-size: 4.5rem;
 }
 
-#vision-p{
+.p-style{
     color: #ffdc8b;
     font-size: 2.2rem;
     text-align: center;
@@ -263,7 +263,7 @@ html{
 }
 
 .vision-cont:last-child{
-    margin-bottom: 2rem;
+    margin-bottom: 5rem;
 }
 
 .vision-cont h2{
@@ -301,10 +301,45 @@ html{
     display: none;
 }
 
+#projects{
+    background-color: #241e1d;
+    padding-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
 
+.projects-main-container{
+    display: grid;
+    grid-template-columns: repeat(3, 22%);
+    grid-auto-rows: auto;
+    justify-content: center;
+    grid-column-gap: 4%;
+}
 
+.projects-main-container .card{
+    margin-bottom: 4rem;
+    background-color: #241e1d;
+    border: 1px solid #e0ae3a;
+    border-radius: 1rem;
+    color: white;
+    font-size: 2rem;
+}
 
+/* .projects-main-container{
+    display: flex;
+    justify-content: center;
+    gap: 2%;
+    flex-wrap: wrap;
+}
 
+.projects-main-container .card{
+    padding: 1rem;
+    border: 2px solid #e0ae3a;
+    width: 30%;
+    flex-wrap: wrap;
+} */
 
 
 
@@ -422,6 +457,10 @@ html{
 
     .vision-cont h2{
         font-size: 2.2rem;
+    }
+
+    .projects-main-container{
+        grid-template-columns: repeat(1, 70%);
     }
 
 }
