--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -319,13 +319,21 @@ html{
 }
 
 .projects-main-container .card{
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
     background-color: #241e1d;
-    border: 1px solid #e0ae3a;
-    border-radius: 1rem;
-    color: white;
+    border: 2px solid #e0ae3a;
+    border-radius: 2rem;
     font-size: 2rem;
+    padding: 2rem;
+    color: white;
+    transition: .5s all;
 }
+
+.projects-main-container .card:hover{
+    transform: translateY(-1.5rem);
+    box-shadow: 0 0 10px #e0ae3a, 0 0 10px #e0ae3a;
+}
+
 
 /* .projects-main-container{
     display: flex;
