--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -232,7 +232,7 @@ html{
     width: 2.2rem;
 }
 
-#vision{
+#vision, #education{
     background-color: #241e1d;
     display: flex;
     flex-direction: column;
@@ -252,7 +252,7 @@ html{
     text-align: center;
 }
 
-.vision-cont{
+.vision-cont, .edu-cont{
     width: 50%;
     border: 2px solid #e0ae3a;
     display: flex;
@@ -266,38 +266,47 @@ html{
     margin-bottom: 5rem;
 }
 
-.vision-cont h2{
+.edu-contt:last-child{
+    margin-bottom: 5rem;
+}
+
+.vision-cont h2, .edu-cont h2{
     font-size: 2.5rem;
     color: white;
 }
 
-.vision-cont h3{
+.vision-cont h3, .edu-cont h3{
     color: #e0ae3a;
     font-size: 2rem;
     font-weight: 400;
 }
 
-.vision-cont p{
+.yr-grad{
+    color: white;
+    font-size: 1.7rem;
+}
+
+.vision-cont p, .edu-cont p{
     color: #ffdc8b;
     text-align: justify;
-    text-indent: 6rem;
+    text-indent: 4rem;
     font-size: 2rem;
 }
 
-.vision-cont .more{
+.vision-cont .more, .edu-cont .more{
     display: none;
     transition: 2s ease-in-out;
 }
 
-.vision-cont:hover{
+.vision-cont:hover, .edu-cont:hover{
     box-shadow: 0 0 .5rem #e0ae3a, 0 0 .5rem #e0ae3a;
 }
 
-.vision-cont:hover .more{
+.vision-cont:hover .more, .edu-cont:hover .more{
     display: inline;
 }
 
-.vision-cont:hover .dots{
+.vision-cont:hover .dots, .edu-cont:hover .dots{
     display: none;
 }
 
@@ -313,7 +322,6 @@ html{
 .projects-main-container{
     display: grid;
     grid-template-columns: repeat(3, 22%);
-    grid-auto-rows: auto;
     justify-content: center;
     grid-column-gap: 4%;
 }
@@ -328,6 +336,7 @@ html{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    justify-content: space-between;
 }
 
 .projects-main-container .card:hover{
@@ -345,6 +354,7 @@ html{
     font-size: 1.4rem;
     display: flex;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .proj-lang span{
@@ -366,6 +376,8 @@ html{
 .proj-links{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 2rem;
 }
 
 .proj-links a{
@@ -373,14 +385,19 @@ html{
     font-size: 1.6rem;
     color: #e0ae3a;
     border: 1.5px solid #e0ae3a;
-    padding: .4rem 1.5rem;
-    border-radius: 5rem;
+    padding: .5rem;
+    border-radius: 1.4rem;
 }
 
 .proj-links a:hover{
     background-color: #e0ae3a;
     color: white;
 }
+
+.edu-head{
+    width: 55%;
+}
+
 
 
 
@@ -493,16 +510,19 @@ html{
         width: 80%;
     }
 
-    .vision-cont{
+    .vision-cont, .edu-cont{
         width: 70% !important;
     }
 
-    .vision-cont h2{
+    .vision-cont h2, .edu-cont h2{
         font-size: 2.2rem;
     }
 
     .projects-main-container{
         grid-template-columns: repeat(1, 70%) !important;
+    }
+    .edu-head{
+        width: 70% !important;
     }
 
 }
@@ -529,9 +549,12 @@ html{
     }
 }
 
-@media (max-width: 912px){
+@media (max-width >= 912px) {
     .sub-cont{
         min-height: 10vh !important;
+    }
+    .projects-main-container{
+        grid-template-columns: repeat(2, 34%) !important;
     }
 
 }
@@ -571,11 +594,6 @@ html{
     }
 }
 
-@media (max-width: 981px){
-    .projects-main-container{
-        grid-template-columns: repeat(2, 32%);
-    }
-}
 
 @media (max-width: 1024px){
     .sub-cont{
@@ -589,14 +607,19 @@ html{
     .sub-cont h2{
         font-size: 1.8rem;
     }
-    .vision-cont{
+    .vision-cont, .edu-cont{
         width: 70% !important; 
     }
-
 }
 
 @media (max-width: 1280px){
-    .vision-cont{
+    .vision-cont, .edu-cont{
+        width: 70%;
+    }
+    .projects-main-container{
+        grid-template-columns: repeat(2, 30%);
+    }
+    .edu-head{
         width: 70%;
     }
 }
