--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -158,25 +158,11 @@ html{
     box-shadow: 0 0 10px #e0ae3a, 0 0 10px #e0ae3a;
 }
 
-#skill-sec{
+#skills{
     padding: 0 0 10rem 0;
-    background-color: #241e1d;
-
 }
 
-.center{
-    text-align: center;
-    color: white;
-}
 
-.center h1{
-    font-size: 4.8rem;
-}
-
-.center p{
-    font-size: 2.2rem;
-    color: #ffdc8b;
-}
 
 .skill-container{
     color: #ffdc8b;
@@ -232,7 +218,7 @@ html{
     width: 2.2rem;
 }
 
-#vision, #education{
+#vision, #education, #skills{
     background-color: #241e1d;
     display: flex;
     flex-direction: column;
@@ -394,7 +380,7 @@ html{
     color: white;
 }
 
-.edu-head{
+.edu-head, .vision-head, .proj-head, .skill-head{
     width: 55%;
 }
 
@@ -524,7 +510,7 @@ html{
     .projects-main-container{
         grid-template-columns: repeat(1, 70%) !important;
     }
-    .edu-head{
+    .edu-head,.vision-head, .proj-head, .skill-head{
         width: 70% !important;
     }
 
@@ -620,9 +606,9 @@ html{
         width: 70%;
     }
     .projects-main-container{
-        grid-template-columns: repeat(2, 30%);
+        grid-template-columns: repeat(2, 36%);
     }
-    .edu-head{
+    .edu-head, .vision-head, .proj-head, .skill-head{
         width: 70%;
     }
 }
