footer syles modified

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -396,8 +396,7 @@ html{
 }
 
 #findme{
-    /* padding-top: 5rem; */
-    padding: 5rem;
+    padding: 5rem 0 3rem 0;
     background-color: #241e1d;
 }
 
